--- a/web/css/base.css
+++ b/web/css/base.css
@@ -39,3 +39,35 @@ textarea{overflow:auto}
 optgroup{font-weight:700}
 table{border-collapse:collapse;border-spacing:0}
 td,th{padding:0}
+.hint,[data-hint]{position:relative;display:inline-block}
+.hint:after,.hint:before,[data-hint]:after,[data-hint]:before{position:absolute;-webkit-transform:translate3d(0,0,0);transform:translate3d(0,0,0);visibility:hidden;opacity:0;z-index:1000000;pointer-events:none;-webkit-transition:.3s ease;transition:.3s ease;-webkit-transition-delay:0ms;transition-delay:0ms}
+.hint:focus:after,.hint:focus:before,.hint:hover:after,.hint:hover:before,[data-hint]:focus:after,[data-hint]:focus:before,[data-hint]:hover:after,[data-hint]:hover:before{visibility:visible;opacity:1}
+.hint:hover:after,.hint:hover:before,[data-hint]:hover:after,[data-hint]:hover:before{-webkit-transition-delay:100ms;transition-delay:100ms}
+.hint:before,[data-hint]:before{content:'';position:absolute;background:0 0;border:6px solid transparent;z-index:1000001}
+.hint:after,[data-hint]:after{content:attr(data-hint);background:rgba(38,38,38,.75);color:#fff;padding:10px 14px 9px;font-size:16px;white-space:nowrap}
+.hint--top:before{border-top-color:rgba(38,38,38,.75)}
+.hint--bottom:before{border-bottom-color:rgba(38,38,38,.75)}
+.hint--left:before{border-left-color:rgba(38,38,38,.75)}
+.hint--right:before{border-right-color:rgba(38,38,38,.75)}
+.hint--top:before{margin-bottom:-12px;margin-left:-6px}
+.hint--top:after{-webkit-transform:translateX(-50%);-ms-transform:translateX(-50%);transform:translateX(-50%)}
+.hint--top:after,.hint--top:before{bottom:100%;left:50%}
+.hint--top:focus:before,.hint--top:hover:before{-webkit-transform:translateY(-12px);-ms-transform:translateY(-12px);transform:translateY(-12px)}
+.hint--top:focus:after,.hint--top:hover:after{-webkit-transform:translateY(-12px) translateX(-50%);-ms-transform:translateY(-12px) translateX(-50%);transform:translateY(-12px) translateX(-50%)}
+.hint--bottom:before{margin-top:-12px}
+.hint--bottom:after{margin-left:-18px}
+.hint--bottom:after,.hint--bottom:before{top:100%;left:50%}
+.hint--bottom:focus:after,.hint--bottom:focus:before,.hint--bottom:hover:after,.hint--bottom:hover:before{-webkit-transform:translateY(8px);-ms-transform:translateY(8px);transform:translateY(8px)}
+.hint--right:before{margin-left:-12px;margin-bottom:-6px}
+.hint--right:after{margin-bottom:-14px}
+.hint--right:after,.hint--right:before{left:100%;bottom:50%}
+.hint--right:focus:after,.hint--right:focus:before,.hint--right:hover:after,.hint--right:hover:before{-webkit-transform:translateX(8px);-ms-transform:translateX(8px);transform:translateX(8px)}
+.hint--left:before{margin-right:-12px;margin-bottom:-6px}
+.hint--left:after{margin-bottom:-14px}
+.hint--left:after,.hint--left:before{right:100%;bottom:50%}
+.hint--left:focus:after,.hint--left:focus:before,.hint--left:hover:after,.hint--left:hover:before{-webkit-transform:translateX(-8px);-ms-transform:translateX(-8px);transform:translateX(-8px)}
+.hint--always:after,.hint--always:before{opacity:1;visibility:visible}
+.hint--always.hint--top:after,.hint--always.hint--top:before{-webkit-transform:translateY(-12px);-ms-transform:translateY(-12px);transform:translateY(-12px)}
+.hint--always.hint--bottom:after,.hint--always.hint--bottom:before{-webkit-transform:translateY(8px);-ms-transform:translateY(8px);transform:translateY(8px)}
+.hint--always.hint--left:after,.hint--always.hint--left:before{-webkit-transform:translateX(-8px);-ms-transform:translateX(-8px);transform:translateX(-8px)}
+.hint--always.hint--right:after,.hint--always.hint--right:before{-webkit-transform:translateX(8px);-ms-transform:translateX(8px);transform:translateX(8px)}
