--- a/haml/index.haml
+++ b/haml/index.haml
@@ -17,12 +17,28 @@
             %a.strong.uppercase(href="#") Plans
             %span.muted.hidden-xs &nbsp;(trial expires in 3 days)
           .one
-            %a.nd-roundimage-wrap(href="#")
-              %img(width="50" heigth="50" src="https://pp.vk.me/c620226/v620226565/2af2/YyPefK3nt7k.jpg")/
+            
+            .drop-menu
+              .drop-fade
+              .drop-trigger
+                %a.nd-roundimage-wrap(href="#")
+                  %img(width="50" heigth="50" src="https://pp.vk.me/c620226/v620226565/2af2/YyPefK3nt7k.jpg")/
+              .drop-content
+                %a.drop-content-one(href="#")
+                  .icon.purple.ic-not-spam
+                  %span Not spam
+                %a.drop-content-one(href="#")
+                  .icon.purple.ic-blocked
+                  %span Block user
     #content.gridwrap
       %aside.sidebar
-        .nd-switcher-wrap.can-animate.active
-          .bg-accent
+        .nd-switcher-wrap.can-animate.w-guide.active
+          .bg-accent.nd-guided
+            <!--.nd-guide.second
+              .nd-guide-head Turn on the Cleaner
+              .muted 
+                To begin cleaning spam from your Instagram, please turn on the Cleaner.
+              %button.btn.rounded Got it-->
             .container.nd-switcher
               .nd-switcher-label
                 %span.nd-switcher-heading Cleaner
@@ -45,7 +61,12 @@
                   %label
                     %input(type="checkbox" checked="checked")
                     %div.nd-switch-el
-            .one.can-animate.unactive
+            .one.can-animate.unactive.nd-guided
+              <!--.nd-guide.second
+                .nd-guide-head Turn on the Cleaner
+                .muted 
+                  To begin cleaning spam from your Instagram, please turn on the Cleaner.
+                %button.btn.rounded Got it-->
               .container
                 .nd-switcher-label
                   %span.letter.green F
