--- a/web/css/style.css
+++ b/web/css/style.css
@@ -36,7 +36,8 @@ header.header .logo{float:left;width:43px}
 .nd-switcher-group .sub{font-size:14px;color:rgba(37,37,37,.4);line-height:22px;font-weight:400;width:160px}
 .nd-switcher-edit.left{float:left}
 .nd-switcher-edit.right{float:right}
-.drop-menu .drop-content,.drop-menu .drop-fade{display:none}
+.drop-menu .drop-content{display:none;z-index:99999}
+.drop-menu .drop-fade{display:none}
 .drop-menu.active .drop-fade{display:block}
 .drop-menu{position:relative}
 .drop-menu.active .drop-content{display:block;position:absolute;z-index:999;right:0;width:220px;background:#FFF;border:1px solid rgba(0,0,0,.12);box-shadow:0 2px 2px 0 rgba(0,0,0,.15);margin-top:11px}
@@ -64,7 +65,7 @@ header.header .logo{float:left;width:43px}
 .bord-bottom{border-bottom:1px solid rgba(0,0,0,.08)}
 .nd-switcher-wrap .sub{-webkit-transition:max-height .3s ease;transition:max-height .3s ease;overflow:hidden}
 .nd-switcher-wrap .one.active .sub,.nd-switcher-wrap .one.anim-active .sub{max-height:300px}
-.nd-switcher-wrap .one.anim-unactive,.nd-switcher-wrap .one.unactive{-webkit-filter:saturate(0);filter:saturate(0)}
+.nd-switcher-wrap .one.anim-unactive .container,.nd-switcher-wrap .one.unactive .container{-webkit-filter:saturate(0);filter:saturate(0)}
 .nd-switcher-wrap .one.anim-unactive .sub,.nd-switcher-wrap .one.unactive .sub{max-height:0}
 .nd-switcher-wrap.can-animate.active{-webkit-filter:saturate(1);filter:saturate(1)}
 .nd-switcher-wrap.can-animate.unactive{-webkit-filter:saturate(0);filter:saturate(0)}
@@ -200,12 +201,23 @@ h2{font-size:30px;line-height:30px}
 .popups-active{overflow:hidden;height:100%}
 .popups-active .popups,.popups-active .popups-fade{display:block}
 .popup-photo{max-width:620px;margin:0 auto}
+.nd-switcher-wrap{position:relative;z-index:9999}
+.w-guide~.nd-switcher-wrap{position:relative;z-index:-1}
+.nd-guided{position:relative;z-index:999}
+.nd-cleaned-one-details .nd-guided .date,.nd-email-request .nd-guided p,.nd-guided .muted,.nd-guided .nd-cleaned-one-details .date,.nd-guided .nd-email-request p,.nd-guided .plans-text{color:rgba(255,255,255,.6)}
+.nd-guided .nd-guide{position:absolute;background:#B959E4;top:100%;margin-top:10px;z-index:9999;right:10px;max-width:300px;line-height:23px;padding:27px 19px 20px;color:#fff;box-shadow:0 2px 2px 0 rgba(0,0,0,.15)}
+.nd-guided .nd-guide-head{font-weight:700;font-size:16px;color:#FFF;line-height:23px}
+.nd-guided .nd-guide:after{content:'';position:absolute;background:0 0;border:6px solid transparent;top:-12px;right:13px;border-bottom-color:#B959E4;z-index:-2}
+.nd-guided .btn{background:0 0;margin-top:15px;color:#fff;border:1px solid rgba(255,255,255,.4);border-radius:40px}
+.nd-guided .btn:hover{border-color:#fff}
+.nd-switcher-group .nd-guide{margin-top:-10px}
 @media only screen and (min-width:720px){.container{padding:0 20px}
 .nd-cleaned-one-buttons,.visible-xs{display:none}
 .sm-full{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-flex-wrap:wrap;-ms-flex-wrap:wrap;flex-wrap:wrap}
 .sm-full .nd-tabs-control-one{-webkit-box-flex:1;-webkit-flex-grow:1;-ms-flex-positive:1;flex-grow:1}
 .hidden-xs{display:block}
-header.header{height:80px;display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-box-align:center;-webkit-align-items:center;-ms-flex-align:center;align-items:center}
+header.header{height:80px;display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-box-align:center;-webkit-align-items:center;-ms-flex-align:center;align-items:center;z-index:1111}
+header.header .drop-content{right:-5px!important}
 header.header .hidden-xs{display:inline-block}
 .container .nd-tabs-control{padding:0}
 .nd-machinelearn-descr{margin-top:0}
@@ -262,7 +274,14 @@ body,html{height:100%}
 .popup-photo{width:940px;max-width:940px}
 .popup-photo img{display:block}
 .popup-photo .nd-cleaned,.popup-photo .popup-image{float:left;width:50%;height:470px}
-.popup-photo .nd-cleaned{padding:0 20px;overflow:scroll;max-height:100%}}
+.popup-photo .nd-cleaned{padding:0 20px;overflow:scroll;max-height:100%}
+.nd-guided{position:relative;z-index:999}
+.nd-cleaned-one-details .nd-guided .date,.nd-email-request .nd-guided p,.nd-guided .muted,.nd-guided .nd-cleaned-one-details .date,.nd-guided .nd-email-request p,.nd-guided .plans-text{color:rgba(255,255,255,.6)}
+.nd-guided .nd-guide{position:absolute;background:#B959E4;top:100%;margin-top:10px;z-index:9999;right:10px;max-width:300px;line-height:23px;padding:27px 19px 20px;color:#fff;box-shadow:0 2px 2px 0 rgba(0,0,0,.15)}
+.nd-guided .nd-guide-head{font-weight:700;font-size:16px;color:#FFF;line-height:23px}
+.nd-guided .nd-guide:after{content:'';position:absolute;background:0 0;border:6px solid transparent;top:-12px;right:13px;border-bottom-color:#B959E4;z-index:-2}
+.nd-guided .btn{background:0 0;margin-top:15px;color:#fff;border:1px solid rgba(255,255,255,.4);border-radius:40px}
+.nd-guided .btn:hover{border-color:#fff}}
 @media only screen and (min-width:1180px){footer.footer{margin-left:-560px;width:320px}
 .sidebar{width:320px}
 .container{max-width:1160px;margin:0 auto}
@@ -299,5 +318,5 @@ body,html{height:100%}
 .email-input-wrap{position:relative}
 .email-input-wrap input:invalid+input{display:none}
 .email-input-wrap .submit{position:absolute;right:10px;top:13px;width:24px;padding:0;height:24px;display:inline-block;content:"";vertical-align:middle;background-image:url(../images/sprite-purple.svg);background-position:center -216px;border:none;font-size:0;-webkit-transform:rotate(-90deg);-ms-transform:rotate(-90deg);transform:rotate(-90deg)}
-.nd-message{background:#FFF;border:1px solid rgba(0,0,0,.12);font-size:16px;color:#262626;line-height:20px;padding:17px 21px 13px;position:fixed;left:50%;top:20px;-webkit-transform:translateX(-50%);-ms-transform:translateX(-50%);transform:translateX(-50%);z-index:10000}
+.nd-message{background:#FFF;border:1px solid rgba(0,0,0,.12);font-size:16px;color:#262626;line-height:20px;padding:17px 21px 13px;position:fixed;left:50%;top:20px;-webkit-transform:translateX(-50%);-ms-transform:translateX(-50%);transform:translateX(-50%);z-index:10000;min-width:280px}
 .nd-message a{color:#B959E4;font-size:14px;font-weight:700}
