--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1047,6 +1047,21 @@ h2 {
     z-index: -1;
     background: rgba(0,0,0,.75);
   }
+  .popup-close {
+    position: absolute;
+    top: 25px;
+    right: 50%;
+    margin-right: -12px;
+    width: 24px;
+    height: 24px;
+    // background: red;
+    // content: "";
+    cursor: pointer;
+    opacity: 0.4;
+    &:hover {
+      opacity: 1;
+    }
+  }
   .popup-one {
     background: white;
   }
@@ -1364,6 +1379,14 @@ h2 {
     }
   }
 
+  .popups {
+    .popup-close {
+      right: 25px;
+      top: 25px;
+      margin-right: 0;
+    }
+  }
+
   .gridwrap {
     display: flex;
     flex-flow: row;
@@ -1416,10 +1439,10 @@ h2 {
     }
     // position: relative;
     .logo {
-      left: 50%;
+      left: 0%;
       position: relative;
       // position: absolute;
-      transform: translateX(-50%);
+      // transform: translateX(-50%);
     }
   }
   .nd-right-nav {
@@ -1673,14 +1696,16 @@ animation-duration: 0.3s;
   0% {
     opacity: 0;
     transform-origin: 50% 50%;
-    transform: scale(2, 2);
+    // transform: scale(2, 2);
+    transform: translateY(300px);
     -webkit-filter: blur(90px);
   }
 
   100% {
     opacity: 1;
     transform-origin: 50% 50%;
-    transform: scale(1, 1);
+    // transform: scale(1, 1);
+    transform: translateY(0px);
     -webkit-filter: blur(0px);
   }
 }
@@ -1689,14 +1714,15 @@ animation-duration: 0.3s;
   0% {
     opacity: 1;
     transform-origin: 50% 50%;
-    transform: scale(1, 1);
+    // transform: scale(1, 1);
     -webkit-filter: blur(0px);
   }
 
   100% {
     opacity: 0;
     transform-origin: 50% 50%;
-    transform: scale(2, 2);
+    // transform: scale(2, 2);
+    transform: translateY(300px);
     -webkit-filter: blur(20px);
   }
 }
