--- a/haml/index.haml
+++ b/haml/index.haml
@@ -713,7 +713,9 @@
           %img(src="images/paypal.svg")
     .popups
       .popups-fade
+        .popup-close.icon.purple.ic-close
       .popup-one.popup-photo
+
         .popup-image
           %img(src="images/square.jpg")
         .nd-cleaned
@@ -722,8 +724,6 @@
           .nd-cleaned-one
             .nd-roundimage-wrap(href="#")
               %img(width="50" heigth="50" src="https://pp.vk.me/c620226/v620226565/2af2/YyPefK3nt7k.jpg")/
-              .nd-cleaned-post
-                %img(src="https://pp.vk.me/c625618/v625618565/37729/2YrxnaN4dNg.jpg")
             .nd-cleaned-one-details
               .drop-menu
                 .hint--top( data-hint="Clean")
@@ -742,8 +742,6 @@
           .nd-cleaned-one
             .nd-roundimage-wrap(href="#")
               %img(width="50" heigth="50" src="https://pp.vk.me/c620226/v620226565/2af2/YyPefK3nt7k.jpg")/
-              .nd-cleaned-post
-                %img(src="https://pp.vk.me/c625618/v625618565/37771/QszaMfxEFqw.jpg")
             .nd-cleaned-one-details
               .drop-menu
                 .hint--top( data-hint="Clean")
