--- a/web/css/style.css
+++ b/web/css/style.css
@@ -194,6 +194,8 @@ h2{font-size:30px;line-height:30px}
 .nd-got-pp a{color:#B959E4}
 .popups{position:fixed;top:0;left:0;right:0;bottom:0;padding:73px 5px 0;z-index:99999;overflow:scroll}
 .popups .popups-fade{position:fixed;top:0;left:0;right:0;bottom:0;z-index:-1;background:rgba(0,0,0,.75)}
+.popups .popup-close{position:absolute;top:25px;right:50%;margin-right:-12px;width:24px;height:24px;cursor:pointer;opacity:.4}
+.popups .popup-close:hover{opacity:1}
 .popups .popup-one{background:#fff}
 .popups .nd-cleaned{padding:0 15px}
 .popups .comments-count{font-weight:700;font-size:14px;color:#262626;line-height:19px;text-transform:uppercase;padding-top:20px;border-bottom:1px solid rgba(0,0,0,.08)}
@@ -245,6 +247,7 @@ header.header .logo{width:54px}
 .sidebar{width:280px;margin-right:20px;position:fixed;top:80px;bottom:60px;z-index:999}
 .nd-machinelearn-descr{margin-top:8px}
 .nd-machinelearn-descr .heading{margin-top:-2px}
+.popups .popup-close{right:25px;top:25px;margin-right:0}
 .gridwrap{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-flex-flow:row;-ms-flex-flow:row;flex-flow:row;min-height:100%;padding:0 20px;position:relative;max-width:980px;margin:0 auto}
 .main-part{-webkit-box-flex:2.5;-webkit-flex:2.5 0;-ms-flex:2.5 0;flex:2.5 0;margin-left:300px;margin-top:80px;border:1px solid rgba(0,0,0,.08);border-top:0}
 .main-part.fullwidth{margin-left:0;border:none}
@@ -253,7 +256,7 @@ header.header .logo{width:54px}
 .sm-full:after{width:100%;border-bottom:1px solid rgba(0,0,0,.08);content:"";margin-top:-1px}
 .header{position:fixed;width:100%;z-index:999;background:#F7F7F7;height:80px}
 .header .container{padding:0 30px}
-.header .logo{left:50%;position:relative;-webkit-transform:translateX(-50%);-ms-transform:translateX(-50%);transform:translateX(-50%)}
+.header .logo{left:0;position:relative}
 .nd-right-nav{margin-top:12px}
 footer.footer{position:fixed;left:50%;margin-left:-470px;bottom:0;width:280px;text-align:left}
 footer.footer .container{padding:0}
@@ -303,14 +306,14 @@ body,html{height:100%}
 .magictime{-webkit-animation-duration:.3s;animation-duration:.3s}
 .vanishIn{-webkit-animation-name:vanishIn;animation-name:vanishIn}
 .vanishOut{-webkit-animation-name:vanishOut;animation-name:vanishOut}
-@-webkit-keyframes vanishIn{0%{opacity:0;-webkit-transform-origin:50% 50%;transform-origin:50% 50%;-webkit-transform:scale(2,2);transform:scale(2,2);-webkit-filter:blur(90px)}
-100%{opacity:1;-webkit-transform-origin:50% 50%;transform-origin:50% 50%;-webkit-transform:scale(1,1);transform:scale(1,1);-webkit-filter:blur(0px)}}
-@keyframes vanishIn{0%{opacity:0;-webkit-transform-origin:50% 50%;transform-origin:50% 50%;-webkit-transform:scale(2,2);transform:scale(2,2);-webkit-filter:blur(90px)}
-100%{opacity:1;-webkit-transform-origin:50% 50%;transform-origin:50% 50%;-webkit-transform:scale(1,1);transform:scale(1,1);-webkit-filter:blur(0px)}}
-@-webkit-keyframes vanishOut{0%{opacity:1;-webkit-transform-origin:50% 50%;transform-origin:50% 50%;-webkit-transform:scale(1,1);transform:scale(1,1);-webkit-filter:blur(0px)}
-100%{opacity:0;-webkit-transform-origin:50% 50%;transform-origin:50% 50%;-webkit-transform:scale(2,2);transform:scale(2,2);-webkit-filter:blur(20px)}}
-@keyframes vanishOut{0%{opacity:1;-webkit-transform-origin:50% 50%;transform-origin:50% 50%;-webkit-transform:scale(1,1);transform:scale(1,1);-webkit-filter:blur(0px)}
-100%{opacity:0;-webkit-transform-origin:50% 50%;transform-origin:50% 50%;-webkit-transform:scale(2,2);transform:scale(2,2);-webkit-filter:blur(20px)}}
+@-webkit-keyframes vanishIn{0%{opacity:0;-webkit-transform-origin:50% 50%;transform-origin:50% 50%;-webkit-transform:translateY(300px);transform:translateY(300px);-webkit-filter:blur(90px)}
+100%{opacity:1;-webkit-transform-origin:50% 50%;transform-origin:50% 50%;-webkit-transform:translateY(0px);transform:translateY(0px);-webkit-filter:blur(0px)}}
+@keyframes vanishIn{0%{opacity:0;-webkit-transform-origin:50% 50%;transform-origin:50% 50%;-webkit-transform:translateY(300px);transform:translateY(300px);-webkit-filter:blur(90px)}
+100%{opacity:1;-webkit-transform-origin:50% 50%;transform-origin:50% 50%;-webkit-transform:translateY(0px);transform:translateY(0px);-webkit-filter:blur(0px)}}
+@-webkit-keyframes vanishOut{0%{opacity:1;-webkit-transform-origin:50% 50%;transform-origin:50% 50%;-webkit-filter:blur(0px)}
+100%{opacity:0;-webkit-transform-origin:50% 50%;transform-origin:50% 50%;-webkit-transform:translateY(300px);transform:translateY(300px);-webkit-filter:blur(20px)}}
+@keyframes vanishOut{0%{opacity:1;-webkit-transform-origin:50% 50%;transform-origin:50% 50%;-webkit-filter:blur(0px)}
+100%{opacity:0;-webkit-transform-origin:50% 50%;transform-origin:50% 50%;-webkit-transform:translateY(300px);transform:translateY(300px);-webkit-filter:blur(20px)}}
 .container .container{padding:0 15px}
 .drop-fade{position:fixed;top:0;left:0;width:100%;height:100%;z-index:999}
 .nd-cleaned-post,.nd-listimages-one{cursor:pointer}
