expired + landing init

--- a/haml/index.haml
+++ b/haml/index.haml
@@ -137,7 +137,7 @@
                     .nd-tabs-control-one.active(data-tab="photos")
                       .icon.purple.ic-photos
                     .bord-bottom
-                  .nd-tabs-content.height-scroll.magictime
+                  .nd-tabs-content.height-scroll.magictime.tabs-images
                     .nd-tabs-content-one.active(data-tab="photos")
                       .nd-listimages
                         %a.nd-listimages-one(href="#")
